--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Pesqueiros SP - O Guia da Fisgada",
   "short_name": "Pesqueiros SP",
-  "start_url": "/app",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#065f46", 
